--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyCart</title>
+    <title>MyCart-Kelompok-5</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,19 +12,11 @@
       <form id="form-cart">
         <div class="form-control">
           <label for="itemName">Item Name</label>
-          <input
-            id="itemName"
-            name="itemName"
-            placeholder="Type product item name"
-          />
+          <input id="itemName" name="itemName" placeholder="Type product item name" />
         </div>
         <div class="form-control">
           <label for="price">Price</label>
-          <input
-            id="price"
-            name="price"
-            placeholder="Type product product price"
-          />
+          <input id="price" name="price" placeholder="Type product product price" />
         </div>
         <div class="form-control">
           <label for="qty">Qty</label>
