--- a/index.html
+++ b/index.html
@@ -5,25 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyCart-Kelompok-5</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="app" class="app-container">
       <h1>MyCart</h1>
       <form id="form-cart">
-        <div class="form-control">
-          <label for="itemName">Item Name</label>
-          <input id="itemName" name="itemName" placeholder="Type product item name" />
+        <div class="card form-control">
+          <div class="card-header">
+            <label for="itemName">Item Name</label>
+          </div>
+          <div class="card-body">
+            <input id="itemName" name="itemName" placeholder="Type product item name" />
+          </div>
         </div>
-        <div class="form-control">
-          <label for="price">Price</label>
-          <input id="price" name="price" placeholder="Type product product price" />
+        <div class="card form-control">
+          <div class="card-header">
+            <label for="price">Price</label>
+          </div>
+          <div class="card-body">
+            <input id="price" name="price" placeholder="Type product product price" />
+          </div>
         </div>
-        <div class="form-control">
-          <label for="qty">Qty</label>
-          <input id="qty" name="qty" placeholder="type qty for this item" />
+        <div class="card form-control">
+          <div class="card-header">
+            <label for="qty">Quantity</label>
+          </div>
+          <div class="card-body">
+            <input id="qty" name="qty" placeholder="Type qty for this item" />
+          </div>
         </div>
         <div>
-          <button type="submit">Submit</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
       <div>
@@ -50,5 +68,10 @@
       </div>
     </div>
     <script src="app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
