--- a/index.html
+++ b/index.html
@@ -5,58 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyCart</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div id="app" class="app-container">
-      <h1>MyCart</h1>
-      <form id="form-cart">
-        <div class="form-control">
-          <label for="itemName">Item Name</label>
+    <div id="app" class="app-container bg-light">
+      <h3 class="text-center">MyCart</h3>
+      
+      <form id="form-cart" class="p-2">
+        <div class="mb-3">
+          <label for="itemName" class="forml-label">Item Name</label>
           <input
             id="itemName"
             name="itemName"
+            class="form-control"
             placeholder="Type product item name"
           />
         </div>
-        <div class="form-control">
-          <label for="price">Price</label>
+        <div class="mb-3">
+          <label for="price" class="forml-label">Price</label>
           <input
             id="price"
             name="price"
+            class="form-control"
             placeholder="Type product product price"
           />
         </div>
-        <div class="form-control">
-          <label for="qty">Qty</label>
-          <input id="qty" name="qty" placeholder="type qty for this item" />
+        <div class="mb-3">
+          <label for="qty"  class="forml-label">Qty</label>
+          <input
+            id="qty"
+            class="form-control"
+            name="qty"
+            placeholder="type qty for this item"
+          />
         </div>
         <div>
-          <button type="submit">Submit</button>
+          <button type="submit" class="btn btn-primary mt-2">Submit</button>
         </div>
       </form>
-      <div>
+      <div id="result" class="p-2">
         <div>
-          <h3>Product</h3>
-          <div id="product-text">-</div>
+          <h5>Product</h5>
+          <div id="product-text">
+            <p>-</p>
+          </div>
         </div>
         <div>
-          <h3>Subtotal</h3>
-          <div id="subtotal-text">-</div>
+          <h5>Subtotal</h5>
+          <div id="subtotal-text">
+            <p>Rp</p>
+          </div>
         </div>
         <div>
-          <h3>Discount</h3>
-          <div id="discount-text">10%</div>
+          <h5>Discount</h5>
+          <div id="discount-text">
+            <p>10%</p>
+          </div>
         </div>
         <div>
-          <h3>Shipping fee</h3>
-          <div id="shipping-fee-text">3000</div>
+          <h5>Shipping fee</h5>
+          <div id="shipping-fee-text">
+            <p>Rp3000</p>
+          </div>
         </div>
         <div>
-          <h2>Total</h2>
-          <div id="total-text">-</div>
+          <h5>Total</h5>
+          <div id="total-text">
+            <p style="font-weight: bold;">Rp</p>
+          </div>
         </div>
       </div>
     </div>
     <script src="app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
