--- a/index.html
+++ b/index.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyCart</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="app" class="app-container">
-      <h1>MyCart</h1>
-      <form id="form-cart">
-        <div class="form-control">
-          <label for="itemName">Item Name</label>
-          <input
-            id="itemName"
-            name="itemName"
-            placeholder="Type product item name"
-          />
-        </div>
-        <div class="form-control">
-          <label for="price">Price</label>
-          <input
-            id="price"
-            name="price"
-            placeholder="Type product product price"
-          />
-        </div>
-        <div class="form-control">
-          <label for="qty">Qty</label>
-          <input id="qty" name="qty" placeholder="type qty for this item" />
-        </div>
-        <div>
-          <button type="submit">Submit</button>
-        </div>
-      </form>
-      <div>
-        <div>
-          <h3>Product</h3>
-          <div id="product-text">-</div>
-        </div>
-        <div>
-          <h3>Subtotal</h3>
-          <div id="subtotal-text">-</div>
-        </div>
-        <div>
-          <h3>Discount</h3>
-          <div id="discount-text">10%</div>
-        </div>
-        <div>
-          <h3>Shipping fee</h3>
-          <div id="shipping-fee-text">3000</div>
-        </div>
-        <div>
-          <h2>Total</h2>
-          <div id="total-text">-</div>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MyCart</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+
+<body>
+  <div id="app" class="app-container">
+    <h1>MyCart</h1>
+    <form id="form-cart">
+      <div class="form-control">
+        <label for="itemName">Item Name</label>
+        <input id="itemName" name="itemName" placeholder="Type product item name" />
+      </div>
+      <div class="form-control">
+        <label for="price">Price</label>
+        <input id="price" name="price" placeholder="Type product product price" />
+      </div>
+      <div class="form-control">
+        <label for="qty">Qty</label>
+        <input id="qty" name="qty" placeholder="type qty for this item" />
+      </div>
+      <div class="ton">
+        <button type="submit" class="btn btn-success  ">Submit</button>
+      </div>
+    </form>
+    <div class="result-box">
+      <div class="result-box-item">
+        <h3>Product</h3>
+        <div id="product-text">-</div>
+      </div>
+      <div class="result-box-item">
+        <h3>Subtotal</h3>
+        <div id="subtotal-text">-</div>
+      </div>
+      <div class="result-box-item">
+        <h3>Discount</h3>
+        <div id="discount-text">10%</div>
+      </div>
+      <div class="result-box-item">
+        <h3>Shipping fee</h3>
+        <div id="shipping-fee-text">3000</div>
+      </div>
+      <hr />
+      <div id="total-text-div" class="result-box-item">
+        <h2>Total</h2>
+        <div id="total-text">-</div>
       </div>
     </div>
-    <script src="app.js"></script>
-  </body>
+  </div>
+  <script src="app.js"></script>
+</body>
+
 </html>
