--- a/index.html
+++ b/index.html
@@ -16,54 +16,50 @@
     <div id="app" class="app-container">
       <h1>MyCart</h1>
       <form id="form-cart">
-        <div class="card form-control">
+        <div class="card">
           <div class="card-header">
-            <label for="itemName">Item Name</label>
+            <label class="form-label" for="itemName">Item Name</label>
           </div>
           <div class="card-body">
-            <input id="itemName" name="itemName" placeholder="Type product item name" />
+            <input class="form-control" id="itemName" name="itemName" placeholder="Type product item name" />
           </div>
         </div>
-        <div class="card form-control">
+        <div class="card">
           <div class="card-header">
-            <label for="price">Price</label>
+            <label class="form-label" for="price">Price</label>
           </div>
           <div class="card-body">
-            <input id="price" name="price" placeholder="Type product product price" />
+            <input class="form-control" id="price" name="price" placeholder="Type product product price" />
           </div>
         </div>
-        <div class="card form-control">
+        <div class="card">
           <div class="card-header">
-            <label for="qty">Quantity</label>
+            <label class="form-label" for="qty">Quantity</label>
           </div>
           <div class="card-body">
-            <input id="qty" name="qty" placeholder="Type qty for this item" />
+            <input class="form-control" id="qty" name="qty" placeholder="Type qty for this item" />
           </div>
         </div>
         <div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
-      <div>
-        <div>
-          <h3>Product</h3>
-          <div id="product-text">-</div>
-        </div>
-        <div>
-          <h3>Subtotal</h3>
-          <div id="subtotal-text">-</div>
-        </div>
-        <div>
-          <h3>Discount</h3>
-          <div id="discount-text">10%</div>
-        </div>
-        <div>
-          <h3>Shipping fee</h3>
-          <div id="shipping-fee-text">3000</div>
-        </div>
-        <div>
-          <h2>Total</h2>
-          <div id="total-text">-</div>
+      <div class="card container" style="padding: 1rem">
+        <div class="row">
+          <div class="col">
+            <h3>Product</h3>
+            <div id="product-text">-</div>
+            <h3 style="margin-top: 1rem">Subtotal</h3>
+            <div id="subtotal-text">-</div>
+          </div>
+          <div class="col">
+            <h3>Discount</h3>
+            <div id="discount-text">10%</div>
+            <h3 style="margin-top: 1rem">Shipping fee</h3>
+            <div id="shipping-fee-text">3000</div>
+            <h2 style="margin-top: 5rem; margin-left: 5rem">Total</h2>
+            <div style="margin-left: 5rem" id="total-text">-</div>
+          </div>
         </div>
       </div>
     </div>
