--- a/index.html
+++ b/index.html
@@ -15,51 +15,58 @@
   <body>
     <div id="app" class="app-container">
       <h1>MyCart</h1>
-      <form id="form-cart">
-        <div class="card">
-          <div class="card-header">
+      <form id="form">
+        <div class="form-card">
+          <div class="header">
             <label class="form-label" for="itemName">Item Name</label>
           </div>
-          <div class="card-body">
+          <div class="body ">
             <input class="form-control" id="itemName" name="itemName" placeholder="Type product item name" />
           </div>
         </div>
-        <div class="card">
-          <div class="card-header">
+        <div class="form-card">
+          <div class="header">
             <label class="form-label" for="price">Price</label>
           </div>
-          <div class="card-body">
+          <div class="body">
             <input class="form-control" id="price" name="price" placeholder="Type product product price" />
           </div>
         </div>
-        <div class="card">
-          <div class="card-header">
+        <div class="form-card">
+          <div class="header">
             <label class="form-label" for="qty">Quantity</label>
           </div>
-          <div class="card-body">
+          <div class="body">
             <input class="form-control" id="qty" name="qty" placeholder="Type qty for this item" />
           </div>
         </div>
-        <div>
+        <div class="d-flex justify-content-center">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
-      <div class="card container" style="padding: 1rem">
+      <div class="card container" >
         <div class="row">
-          <div class="col">
-            <h3>Product</h3>
+          <div class="col-6 p-2">
+            <h4>Product</h4>
             <div id="product-text">-</div>
-            <h3 style="margin-top: 1rem">Subtotal</h3>
+          </div>
+          <div class="col-6 p-2">
+            <h4>Subtotal</h4>
             <div id="subtotal-text">-</div>
           </div>
-          <div class="col">
-            <h3>Discount</h3>
+          <div class="col-6 p-2">
+            <h4>Discount</h4>
             <div id="discount-text">10%</div>
-            <h3 style="margin-top: 1rem">Shipping fee</h3>
-            <div id="shipping-fee-text">3000</div>
-            <h2 style="margin-top: 5rem; margin-left: 5rem">Total</h2>
-            <div style="margin-left: 5rem" id="total-text">-</div>
           </div>
+          <div class="col-6 p-2">
+            <h4>Shipping fee</h4>
+            <div id="shipping-fee-text">3000</div>
+          </div>
+        </div>
+        <hr>
+        <div class="justify-content-end">
+            <h2 >Total</h2>
+            <div id="total-text">-</div>
         </div>
       </div>
     </div>
