Add math functions to calculate subtotal, discount, and total

--- a/index.html
+++ b/index.html
@@ -1,64 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MyCart</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-
-<body>
-  <div id="app" class="app-container">
-    <h1>MyCart</h1>
-    <form id="form-cart">
-      <div class="form-control">
-        <label for="itemName">Item Name</label>
-        <input id="itemName" name="itemName" placeholder="Type product item name" />
+  <head>
+    <title>Binar Cart</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://global-uploads.webflow.com/5e70b9a791ceb781b605048c/642a550c99a0eb420ad3b15e_favicon.ico"
+      rel="shortcut icon"
+      type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="w-full h-full p-10">
+    <main
+      id="app"
+      class="app-container mx-auto flex flex-col justify-start">
+      <h1 class="mx-auto text-[2rem] font-semibold">Binar Cart</h1>
+      <form id="form-cart">
+        <div class="form-control">
+          <label
+            for="itemName"
+            class="text-[16px] font-medium my-2"
+            >Item Name</label
+          >
+          <input
+            id="itemName"
+            type="text"
+            name="itemName"
+            class="p-3 rounded-[10px]"
+            placeholder="Type product item name" />
+        </div>
+        <div class="form-control">
+          <label
+            for="price"
+            class="text-[16px] font-medium my-2"
+            >Price</label
+          >
+          <input
+            id="price"
+            type="number"
+            name="price"
+            class="p-3 rounded-[10px]"
+            placeholder="Type product product price" />
+        </div>
+        <div class="form-control">
+          <label
+            for="qty"
+            class="text-[16px] font-medium my-2"
+            >Qty</label
+          >
+          <input
+            id="qty"
+            name="qty"
+            type="number"
+            class="p-3 rounded-[10px]"
+            placeholder="Type qty for this item" />
+        </div>
+        <div class="flex justify-center w-full">
+          <button
+            type="submit"
+            class="w-full p-3 bg-slate-700 text-white rounded-lg my-3">
+            Submit
+          </button>
+        </div>
+      </form>
+      <div class="flex flex-col w-full my-5">
+        <div class="flex flex-row w-full">
+          <div class="flex flex-col w-[50%] gap-8">
+            <div>
+              <h3 class="text-[14px] font-semibold">Product</h3>
+              <div
+                id="product-text"
+                class="text-[32px] font-bold">
+                -
+              </div>
+            </div>
+            <div>
+              <h3 class="text-[14px] font-semibold">Subtotal</h3>
+              <div
+                id="subtotal-text"
+                class="text-[32px] font-bold">
+                -
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col w-[50%] gap-8">
+            <div>
+              <h3 class="text-[14px] font-semibold">Discount</h3>
+              <div
+                id="discount-text"
+                class="text-[32px] font-bold">
+                10%
+              </div>
+            </div>
+            <div>
+              <h3 class="text-[14px] font-semibold">Shipping fee</h3>
+              <div
+                id="shipping-fee-text"
+                class="text-[32px] font-bold">
+                3000
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="border-2 border-dashed border-slate-300 rounded-lg bg-white shadow-md flex p-10 justify-center content-center mt-12">
+          <div class="flex flex-col mx-auto my-auto">
+            <h2 class="text-[20px] font-semibold">Total</h2>
+            <div
+              class="text-red-700 text-[3rem] font-bold p-4"
+              id="total-text">
+              -
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="form-control">
-        <label for="price">Price</label>
-        <input id="price" name="price" placeholder="Type product product price" />
-      </div>
-      <div class="form-control">
-        <label for="qty">Qty</label>
-        <input id="qty" name="qty" placeholder="type qty for this item" />
-      </div>
-      <div class="ton">
-        <button type="submit" class="btn btn-success  ">Submit</button>
-      </div>
-    </form>
-    <div class="result-box">
-      <div class="result-box-item">
-        <h3>Product</h3>
-        <div id="product-text">-</div>
-      </div>
-      <div class="result-box-item">
-        <h3>Subtotal</h3>
-        <div id="subtotal-text">-</div>
-      </div>
-      <div class="result-box-item">
-        <h3>Discount</h3>
-        <div id="discount-text">10%</div>
-      </div>
-      <div class="result-box-item">
-        <h3>Shipping fee</h3>
-        <div id="shipping-fee-text">3000</div>
-      </div>
-      <hr />
-      <div id="total-text-div" class="result-box-item">
-        <h2>Total</h2>
-        <div id="total-text">-</div>
-      </div>
-    </div>
-  </div>
-  <script src="app.js"></script>
-</body>
-
+    </main>
+    <script src="app.js "></script>
+  </body>
 </html>
